--- a/APBD_21.05/Views/Patients/Index.cshtml
+++ b/APBD_21.05/Views/Patients/Index.cshtml
@@ -3,4 +3,5 @@
 
 <p>
     @Html.ActionLink("Wyświetl listę wszystkich pacjentów", "PatientsTable", "Patients", null, new {@class = "homeBtn"})
+    @Html.ActionLink("Dodaj nowego pacjenta", "ShowForm", "Patients", null, new {@class = "homeAdd"})
 </p>
