Finished details and remove patient

--- a/APBD_21.05/Views/Patients/Index.cshtml
+++ b/APBD_21.05/Views/Patients/Index.cshtml
@@ -1,7 +1,6 @@
-﻿
-<h1>Witamy w klinice doktora Rzepki</h1>
+﻿<h1>Witamy w klinice doktora Rzepki</h1>
 
 <p>
-    @Html.ActionLink("Wyświetl listę wszystkich pacjentów", "PatientsTable", "Patients", null, new {@class = "homeBtn"})
+    @Html.ActionLink("Wyświetl listę wszystkich pacjentów", "PatientsList", "Patients", null, new {@class = "homeBtn"})
     @Html.ActionLink("Dodaj nowego pacjenta", "ShowForm", "Patients", null, new {@class = "homeAdd"})
 </p>
