Finished - Added form and styled

--- a/APBD_21.05/Views/Patients/Index.cshtml
+++ b/APBD_21.05/Views/Patients/Index.cshtml
@@ -2,5 +2,5 @@
 
 <p>
     @Html.ActionLink("Wyświetl listę wszystkich pacjentów", "PatientsList", "Patients", null, new {@class = "homeBtn"})
-    @Html.ActionLink("Dodaj nowego pacjenta", "ShowForm", "Patients", null, new {@class = "homeAdd"})
+    @Html.ActionLink("Dodaj nowego pacjenta", "RegisterPatient", "Patients", null, new {@class = "homeAdd"})
 </p>
