Finished - Visual corrections

--- a/APBD_21.05/Views/Patients/Index.cshtml
+++ b/APBD_21.05/Views/Patients/Index.cshtml
@@ -1,6 +1,6 @@
-﻿<h1>Witamy w klinice doktora Rzepki</h1>
-
+﻿<h2 class="center-align">Witamy w klinice doktora Rzepki</h2>
+<br/>
 <p>
-    @Html.ActionLink("Wyświetl listę wszystkich pacjentów", "PatientsList", "Patients", null, new {@class = "homeBtn"})
-    @Html.ActionLink("Dodaj nowego pacjenta", "RegisterPatient", "Patients", null, new {@class = "homeAdd"})
+    @Html.ActionLink("Wyświetl listę wszystkich pacjentów", "PatientsList", "Patients", null, new {@class = "btn"})
+    @Html.ActionLink("Dodaj nowego pacjenta", "RegisterPatient", "Patients", null, new {@class = "btn"})
 </p>
