--- a/APBD_21.05/Views/Patients/PatientsList.cshtml
+++ b/APBD_21.05/Views/Patients/PatientsList.cshtml
@@ -1,5 +1,5 @@
 ﻿@model IEnumerable<APBD_21._05.Model.Patient>
-<h3>Lista pacjetnów klinki doktora Rzepki</h3>
+<h3 class="center-align">Lista pacjetnów klinki doktora Rzepki</h3>
 <br/>
 <p>
 <table>
